force-app/main/default/objects/Sales_Activity_Tracker__c/Sales_Activity_Tracker__c.object-meta.xml
<CustomObject>
    <label>Sales Activity Tracker</label>
    <nameField>
        <displayFormat>SAT-{0}</displayFormat>
        <label>Tracker #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Activity Trackers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>