force-app/main/default/objects/Sales_Activity_Tracker__c/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <formula>Owner:User.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Manager</label>
    <type>Text</type>
</CustomField>