force-app/main/default/objects/Sales_Activity_Tracker__c/fields/Other_Project_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Other_Project_Discussed__c</fullName>
    <label>Other Project Discussed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>