force-app/main/default/objects/Sales_Activity_Tracker__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreed Follow-up</fullName>
            </value>
            <value>
                <fullName>Strong Interest</fullName>
            </value>
            <value>
                <fullName>Needs Materials</fullName>
            </value>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>