force-app/main/default/objects/Sales_Activity_Tracker__c/fields/Projects_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Projects_Discussed__c</fullName>
    <label>Projects Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trussardi Residences</fullName>
            </value>
            <value>
                <fullName>MIRA Villas Designed by Bentley Home</fullName>
            </value>
            <value>
                <fullName>Trussardi Residences 2</fullName>
            </value>
            <value>
                <fullName>POST HOTEL &amp; RESIDENCES By ELIE SAAB</fullName>
            </value>
            <value>
                <fullName>GIANFRANCO FERRE RESIDENCES</fullName>
            </value>
            <value>
                <fullName>Trussardi Residences 2 Offices</fullName>
            </value>
            <value>
                <fullName>Trussardi Residences MIRA VERDE</fullName>
            </value>
            <value>
                <fullName>John Richmond Residences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>