force-app/main/default/objects/Sales_Activity_Tracker__c/fields/RMs_Attended__c.field-meta.xml
<CustomField>
    <fullName>RMs_Attended__c</fullName>
    <label>RMs Attended</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RMs_List</valueSetName>
    </valueSet>
</CustomField>