force-app/main/default/objects/Sales_Activity_Tracker__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <formula>TEXT(FLOOR((End_Date_Time__c - Start_Date_Time__c) * 24)) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((End_Date_Time__c - Start_Date_Time__c) * 1440, 60))), 2) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(ROUND(MOD((End_Date_Time__c - Start_Date_Time__c) * 86400, 60), 0)), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Spent</label>
    <type>Text</type>
</CustomField>