force-app/main/default/objects/Sales_Activity_Tracker__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_Type</valueSetName>
    </valueSet>
</CustomField>