force-app/main/default/objects/Sales_Activity_Tracker__c/validationRules/RMs_Can_Only_Change_Activity_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>RMs_Can_Only_Change_Activity_Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  $Profile.Name = &quot;Sales Manager MIRA&quot;,
  OR(
    ISCHANGED( Agency__c ),
    ISCHANGED( Number_of_Agents__c ),
    ISCHANGED( Type__c ),
    ISCHANGED( Start_Date_Time__c ),
    ISCHANGED( End_Date_Time__c ),
    ISCHANGED( Description__c ),
    ISCHANGED( RMs_Attended__c )
  )
)</errorConditionFormula>
    <errorMessage>You can only change the Activity on this record. Please contact your Line Manager for any other changes required.</errorMessage>
</ValidationRule>