force-app/main/default/objects/Sales_Activity_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Agency__c</columns>
    <columns>Activity__c</columns>
    <columns>Type__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Time_Spent__c</columns>
    <columns>Number_of_Agents__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>